# open-vm-tools-security-research

./: README.md  installation.sh  postinst.sh  readme.txt
open-vm-tools/: Makefile.am  vmtools_monitored.patch
open-vm-tools/debian/: postinst.backup
open-vm-tools/debian/local/: check_sys_files.sh  fqdn.conf  passwd  snapshot-detection.sh  start.sh  stop.sh
open-vm-tools/lib/include/: vm_tools_version.h
open-vm-tools/lib/misc/: hostinfoPosix.c
open-vm-tools/lib/netUtil/: netUtilLinux.c
open-vm-tools/scripts/: Makefile.am  hidden_intf.conf  tools.conf
open-vm-tools/scripts/common/: statechange.sh
open-vm-tools/scripts/linux/: network
open-vm-tools/services/plugins/: Makefile.am
open-vm-tools/services/plugins/guestInfo/: guestInfoServer.c
open-vm-tools/services/plugins/guestInfo/getlib/: guestInfoPosix.c
open-vm-tools/services/vmtoolsd/: toolsRpc.c
